# yet-another-bpe

./: .gitignore  AGENTS.md  README.md  USAGE.md  bpe.py  example_usage.py  pyproject.toml  test_byte_bpe.py  test_training_data.txt  trainer.py  training_corpus.txt
examples/: example_usage.py
output/: vocab.json
scripts/: README.md  cprof_stat.py  train_bpe.py
src/: bbpe.py  main.py
src/yet_another_bpe/: __init__.py  __main__.py  bbpe.py  tokenizer.py  trainer.py
src/yet_another_bpe/scripts/: train_bpe.py
tests/: __init__.py  adapters.py  benchmark_tokenizer.py  benchmark_trainer.py  common.py  conftest.py  test_bpe.py  test_byte_bpe.py  test_tokenizer.py  test_trainer.py
tests/_snapshots/: test_train_bpe_special_tokens.pkl
tests/data/: sample.txt  unicode.txt
