[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yet-another-bpe"
version = "0.1.0"
description = "A Byte Pair Encoding (BPE) tokenizer implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "regex>=2025.11.3",
    "rich>=14.2.0",
]
authors = [
    {name = "DreamOneX", email = "me@dreamonex.eu.org"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
yet-another-bpe = "yet_another_bpe.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yet_another_bpe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
